// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterStatusComponent component snapshot with filters showFilteredFields 1`] = `
<div
  className="css-class-name"
>
  <p>
    Filtered by 
    filter-name-0, filter-name-1
  </p>
  <Button
    className="css-class-name-for-button"
    onClick={[MockFunction hookProps.clearFilters]}
    size="button-size"
    variant="button-variant"
  >
    clear-filter-text
  </Button>
</div>
`;

exports[`FilterStatusComponent component snapshot with filters showFilteredFields=false - hide filterTexts 1`] = `
<div
  className="css-class-name"
>
  <Button
    className="css-class-name-for-button"
    onClick={[MockFunction hookProps.clearFilters]}
    size="button-size"
    variant="button-variant"
  >
    clear-filter-text
  </Button>
</div>
`;

exports[`FilterStatusComponent component snapshot without filters 1`] = `""`;
